# ReviewLens-AI

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  api_metadata.py  config.py  main.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/llm/: __init__.py  base.py  factory.py  fake_provider.py  openai_provider.py
backend/app/models/: api_error.py
backend/app/repositories/: chat_memory.py  ingestion_runs.py  products.py
backend/app/routers/: __init__.py  chat.py  context.py  health.py  ingestion.py  products.py
backend/app/schemas/: chat.py  context.py  ingestion.py  products.py
backend/app/services/: __init__.py  products_service.py  (+3 more)
backend/migrations/: README.md  env.py
backend/scripts/: verify_sample_urls.py
backend/tests/: conftest.py  test_chat_prompt_builder.py  test_chat_stream_api.py  test_chat_stream_service.py  test_config_security.py  test_context_api.py  test_conversation_memory.py  test_csv_parser.py  test_firecrawl_fetcher.py  test_health.py  test_ingestion_api.py  test_ingestion_orchestration.py  test_llm_factory.py  test_migrations_smoke.py  test_openapi_docs.py  test_products_api.py  test_retrieval_service.py  test_retrieval_service_postgres.py  test_review_analytics.py  test_review_normalization.py  test_review_suggested_questions.py  test_url_pipeline.py  test_url_safety.py  test_workflow_integration.py
(+74 files in other folders)
